[package]
name = "final_torrent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bitvec = "1.0.1"
byteorder = "1.5.0"
hex = "0.4.3"
rand = "0.8.5"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
tokio = {version="1.43.0", features = ["full"]}
url = "2.5.4"
